--- a/src/app/portafolio/pages/proyectos/proyectos.component.html
+++ b/src/app/portafolio/pages/proyectos/proyectos.component.html
@@ -1,1 +1,19 @@
-<H1>Proyectos</H1>
+<section class="container py-5" id="section2" style="background-color:#31a8ae;border-radius: 15px;border:solid;">
+  <h1 class="mb-3">Proyectos</h1>
+  <div class="row justify-content-center mt-3">
+    <div class="col-md-4 col-sm-6">
+      <div class="card">
+        <img class="card-img-top" src="assets/img/recetario.png">
+        <div class="card-body">
+          <h5 class="card-title">Recetario</h5>
+          <p class="card-text">Una aplicación pensada no solo para guardar tus recetas si no
+            también la herramienta que ayudara con la administración de estas en su día a
+            día</p>
+          <a href="https://angeldelatorre.000webhostapp.com" class="btn btn-primary bi bi-globe2 mb-1"> Sitio web</a>
+          <a href="https://github.com/deeperunmade/Recetario" target="_blank" class="btn btn-primary bi bi-github">
+            Repositorio</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
