--- a/src/app/portafolio/pages/sobre-mi/sobre-mi.component.html
+++ b/src/app/portafolio/pages/sobre-mi/sobre-mi.component.html
@@ -1,1 +1,50 @@
-<h1>Sobre Mi:</h1>
+<section class="container-fluid py-5"
+                    style="background-color:#95e4d4;border:solid;border-radius:15px">
+                    <h1 class=" mb-5">Sobre mi</h1>
+                    <div class="row gy-sm-3">
+                        <div class="col-md-4">
+                            <img src="assets/img/perfil.png" class="img-fluid" style="border-radius: 20px;">
+                        </div>
+                        <div class="col-md-4">
+                            <h3 class="mb-3 mt-3">¿Quién soy?</h3>
+                            <p class="text-start quien_soy">
+                                Mi nombre es Angel de la Torre y soy estudiante de la ingeniería en software y redes en
+                                la universidad tecnológica de México donde actualmente me encuentro cursando 10mo
+                                cuatrimestre. Soy una persona que le gusta estar en constante aprendizaje por lo que
+                                tengo un aprendizaje mayormente autodidacta buscando siempre estar actualizado. Lo mas
+                                importante para mi es alcanzar mis objetivos y metas.
+                            </p>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="row text-start">
+                                <div class="col-12">
+                                    <h3 class="text-center mb-5">Habilidades</h3>
+                                    <div class="row skills text-center gy-sm-3">
+                                        <div class="col-4">
+                                            <a class="css"><i class="fab fa-css3-alt"></i></a>
+                                        </div>
+                                        <div class="col-4">
+                                            <a class="js"><i class="fab fa-js"></i></a>
+                                        </div>
+                                        <div class="col-4">
+                                            <a class="php"><i class="fab fa-php"></i></a>
+                                        </div>
+                                        <div class="col-4">
+                                            <a class="sass"><i class="fab fa-sass"></i></a>
+                                        </div>
+                                        <div class="col-4">
+                                            <a class="html"><i class="fab fa-html5"></i></a>
+                                        </div>
+                                        <div class="col-4">
+                                            <a class="python"><i class="fab fa-python"></i></a>
+                                        </div>
+                                        <div class="col-4">
+                                            <a class="bootstrap"><i class="fab fa-bootstrap"></i></a>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
