--- a/src/app/portafolio/pages/sobre-mi/sobre-mi.component.html
+++ b/src/app/portafolio/pages/sobre-mi/sobre-mi.component.html
@@ -3,7 +3,7 @@
                     <h1 class=" mb-5">Sobre mi</h1>
                     <div class="row gy-sm-3">
                         <div class="col-md-4">
-                            <img src="./assets/img/perfil.png" class="img-fluid" style="border-radius: 20px;">
+                            <img src="assets/img/perfil.png" class="img-fluid" style="border-radius: 20px;">
                         </div>
                         <div class="col-md-4">
                             <h3 class="mb-3 mt-3">¿Quién soy?</h3>
