--- a/src/app/portafolio/pages/layout-page/layout-page.component.html
+++ b/src/app/portafolio/pages/layout-page/layout-page.component.html
@@ -37,7 +37,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" data-scroll href="./assets/curriculum/currículum.pdf" target="_blank">
+          <a class="nav-link" data-scroll href="assets/curriculum/currículum.pdf" target="_blank">
             Curriculum
           </a>
         </li>
