--- a/src/app/portafolio/pages/proyectos/proyectos.component.html
+++ b/src/app/portafolio/pages/proyectos/proyectos.component.html
@@ -3,7 +3,7 @@
   <div class="row justify-content-center mt-3">
     <div class="col-md-4 col-sm-6">
       <div class="card">
-        <img class="card-img-top" src="./assets/img/recetario.png">
+        <img class="card-img-top" src="assets/img/recetario.png">
         <div class="card-body">
           <h5 class="card-title">Recetario</h5>
           <p class="card-text">Una aplicación pensada no solo para guardar tus recetas si no
