--- a/src/app/portafolio/pages/sobre-mi/sobre-mi.component.html
+++ b/src/app/portafolio/pages/sobre-mi/sobre-mi.component.html
@@ -1,4 +1,4 @@
-<section class="container-fluid py-5"
+<section class="container-fluid py-3"
                     style="background-color:#95e4d4;border:solid;border-radius:15px">
                     <h1 class=" mb-5">Sobre mi</h1>
                     <div class="row gy-sm-3">
@@ -6,7 +6,7 @@
                             <img src="./assets/img/perfil.png" class="img-fluid" style="border-radius: 20px;">
                         </div>
                         <div class="col-md-4">
-                            <h3 class="mb-3 mt-3">¿Quién soy?</h3>
+                            <h3>¿Quién soy?</h3>
                             <p class="text-start quien_soy">
                                 Mi nombre es Angel de la Torre y soy estudiante de la ingeniería en software y redes en
                                 la universidad tecnológica de México donde actualmente me encuentro cursando 10mo
