--- a/src/app/portafolio/pages/proyectos/proyectos.component.html
+++ b/src/app/portafolio/pages/proyectos/proyectos.component.html
@@ -9,9 +9,26 @@
           <p class="card-text">Una aplicación pensada no solo para guardar tus recetas si no
             también la herramienta que ayudara con la administración de estas en su día a
             día</p>
-          <a href="https://angeldelatorre.000webhostapp.com" class="btn btn-primary bi bi-globe2 mb-1"> Sitio web</a>
-          <a href="https://github.com/deeperunmade/Recetario" target="_blank" class="btn btn-primary bi bi-github">
-            Repositorio</a>
+          <div class="row">
+
+            <div class="col-6">
+              <a
+              href="https://angeldelatorre.000webhostapp.com"
+              class="btn btn-primary bi bi-globe2 mb-1">
+              Sitio web
+              </a>
+            </div>
+
+            <div class="col-6">
+              <a
+              href="https://github.com/deeperunmade/Recetario"
+              target="_blank"
+              class="btn btn-primary bi bi-github">
+              Repositorio
+              </a>
+            </div>
+
+          </div>
         </div>
       </div>
     </div>
