--- a/src/app/portafolio/pages/layout-page/layout-page.component.html
+++ b/src/app/portafolio/pages/layout-page/layout-page.component.html
@@ -18,20 +18,20 @@
 
       <ul class="navbar-nav ms-auto mb-2 mb-md-0">
 
-        <li routerLink="sobre-mi" class="nav-item">
-          <a data-mdb-toggle="collapse" class="btn nav-link" data-scroll>
+        <li class="nav-item">
+          <a routerLink="sobre-mi" data-mdb-toggle="collapse" class="nav-link" data-scroll>
             Sobre mi
           </a>
         </li>
 
-        <li routerLink="proyectos" class="nav-item">
-          <a data-mdb-toggle="collapse" class="btn nav-link" data-scroll>
+        <li class="nav-item">
+          <a routerLink="proyectos" data-mdb-toggle="collapse" class="nav-link" data-scroll>
             Proyectos
           </a>
         </li>
 
-        <li routerLink="contacto" class="nav-item">
-          <a data-mdb-toggle="collapse" class="btn nav-link" data-scroll>
+        <li class="nav-item">
+          <a routerLink="contacto" data-mdb-toggle="collapse" class="nav-link" data-scroll>
             Contacto
           </a>
         </li>
