--- a/src/app/portafolio/pages/layout-page/layout-page.component.html
+++ b/src/app/portafolio/pages/layout-page/layout-page.component.html
@@ -54,27 +54,27 @@
 
           <li>
             <a class="dropdown-item bi bi-whatsapp" target="_blank"
-              href="https://wa.me/3335055722/?text=Interesad@%20en%20tus%20servicios">
+              [href]="_servicio.info.whatsapp">
               Whatsapp
             </a>
           </li>
 
           <li>
             <a class="dropdown-item bi bi-linkedin" target="_blank"
-              href="https://www.linkedin.com/in/Angel-de-la-Torre">
+              [href]="_servicio.info.linkedin">
               Linkedin
             </a>
           </li>
 
           <li>
-            <a class="dropdown-item bi bi-github" target="_blank" href="https://github.com/deeperunmade">
+            <a class="dropdown-item bi bi-github" target="_blank" [href]="_servicio.info.github">
               Github
             </a>
           </li>
 
           <li>
             <a class="dropdown-item bi bi-envelope-at-fill"
-              href="mailto:darkknightandroid@gmail.com?Subject=Interesad@%20en%20tus%20servicios">
+              [href]="_servicio.info.gmail">
               Gmail
             </a>
           </li>
