--- a/src/app/portafolio/pages/sobre-mi/sobre-mi.component.html
+++ b/src/app/portafolio/pages/sobre-mi/sobre-mi.component.html
@@ -8,11 +8,7 @@
                         <div class="col-md-4">
                             <h3 class="mt-3">¿Quién soy?</h3>
                             <p class="text-start quien_soy">
-                                Mi nombre es Angel de la Torre y soy estudiante de la ingeniería en software y redes en
-                                la universidad tecnológica de México donde actualmente me encuentro cursando 10mo
-                                cuatrimestre. Soy una persona que le gusta estar en constante aprendizaje por lo que
-                                tengo un aprendizaje mayormente autodidacta buscando siempre estar actualizado. Lo mas
-                                importante para mi es alcanzar mis objetivos y metas.
+                                {{_servicio.info.sobreMi}}
                             </p>
                         </div>
                         <div class="col-md-4">
