--- a/src/app/portafolio/pages/proyectos/proyectos.component.html
+++ b/src/app/portafolio/pages/proyectos/proyectos.component.html
@@ -2,35 +2,29 @@
   <h1 class="mb-3">Proyectos</h1>
   <div class="row justify-content-center mt-3">
     <div class="col-md-4 col-sm-6">
-      <div class="card">
-        <img class="card-img-top" src="./assets/img/recetario.png">
+
+      <div *ngFor="let proyecto of _servicio.equipo" class="card animate__animated animate__fadeIn">
+        <img class="card-img-top" [src]="proyecto.url">
         <div class="card-body">
-          <h5 class="card-title">Recetario</h5>
-          <p class="card-text">Una aplicación pensada no solo para guardar tus recetas si no
-            también la herramienta que ayudara con la administración de estas en su día a
-            día</p>
+          <h5 class="card-title">{{proyecto.nombre}}</h5>
+          <p class="card-text">{{proyecto.descripcion}}</p>
           <div class="row">
 
             <div class="col-6">
-              <a
-              href="https://angeldelatorre.000webhostapp.com"
-              class="btn btn-primary bi bi-globe2 mb-1">
-              Sitio web
+              <a [href]="proyecto.page" class="btn btn-primary bi bi-globe2 mb-1">
+                Sitio web
               </a>
             </div>
 
             <div class="col-6">
-              <a
-              href="https://github.com/deeperunmade/Recetario"
-              target="_blank"
-              class="btn btn-primary bi bi-github">
-              Repositorio
+              <a [href]="proyecto.repositorio" target="_blank" class="btn btn-primary bi bi-github">
+                Repositorio
               </a>
             </div>
-
           </div>
         </div>
       </div>
+
     </div>
   </div>
 </section>
