--- a/src/app/portafolio/pages/layout-page/layout-page.component.html
+++ b/src/app/portafolio/pages/layout-page/layout-page.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark" style="background-color: #036a93;">
+<nav class="navbar navbar-expand-md navbar-dark navBackground">
 
   <div class="container">
 
@@ -46,7 +46,7 @@
 
       <div class="dropdown">
 
-        <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" style="background-color: #31a8ae;">
+        <button class="btn dropdown-toggle btnSocial" type="button" data-bs-toggle="dropdown">
           Redes Sociales
         </button>
 
