--- a/src/app/portafolio/pages/sobre-mi/sobre-mi.component.html
+++ b/src/app/portafolio/pages/sobre-mi/sobre-mi.component.html
@@ -1,5 +1,5 @@
-<section class="container-fluid py-3"
-                    style="background-color:#95e4d4;border:solid;border-radius:15px">
+<section class="container-fluid py-3 sobreMiBackground"
+                    style="border:solid;border-radius:15px">
                     <h1 class="mb-5">Sobre mi</h1>
                     <div class="row gy-sm-3">
                         <div class="col-md-4">
