--- a/src/app/portafolio/pages/proyectos/proyectos.component.html
+++ b/src/app/portafolio/pages/proyectos/proyectos.component.html
@@ -25,9 +25,9 @@
       <p>Espere por favor</p>
     </div>
 
-    <div *ngIf="!_servicio.cargando" class="col-md-4 col-sm-6">
+    <div *ngIf="!_servicio.cargando" class="row">
 
-      <div *ngFor="let proyecto of _servicio.equipo" class="card animate__animated animate__fadeIn">
+      <div *ngFor="let proyecto of _servicio.equipo" class="col-md-4 mx-2 col-sm-6 card animate__animated animate__fadeIn">
         <img class="card-img-top" [src]="proyecto.url">
         <div class="card-body">
           <h5 class="card-title">{{proyecto.nombre}}</h5>
