--- a/src/app/portafolio/pages/sobre-mi/sobre-mi.component.html
+++ b/src/app/portafolio/pages/sobre-mi/sobre-mi.component.html
@@ -15,7 +15,7 @@
                             <div class="row text-start">
                                 <div class="col-12">
                                     <h3 class="text-center mb-5">Habilidades</h3>
-                                    <div class="row skills text-center gy-sm-3">
+                                    <div class="row skills text-center">
                                         <div class="col-4">
                                             <a class="css"><i class="fab fa-css3-alt"></i></a>
                                         </div>
