--- a/src/app/portafolio/pages/layout-page/layout-page.component.html
+++ b/src/app/portafolio/pages/layout-page/layout-page.component.html
@@ -53,15 +53,13 @@
         <ul class="dropdown-menu">
 
           <li>
-            <a class="dropdown-item bi bi-whatsapp" target="_blank"
-              [href]="_servicio.info.whatsapp">
+            <a class="dropdown-item bi bi-whatsapp" target="_blank" [href]="_servicio.info.whatsapp">
               Whatsapp
             </a>
           </li>
 
           <li>
-            <a class="dropdown-item bi bi-linkedin" target="_blank"
-              [href]="_servicio.info.linkedin">
+            <a class="dropdown-item bi bi-linkedin" target="_blank" [href]="_servicio.info.linkedin">
               Linkedin
             </a>
           </li>
@@ -73,8 +71,7 @@
           </li>
 
           <li>
-            <a class="dropdown-item bi bi-envelope-at-fill"
-              [href]="_servicio.info.gmail">
+            <a class="dropdown-item bi bi-envelope-at-fill" [href]="_servicio.info.gmail">
               Gmail
             </a>
           </li>
@@ -89,14 +86,6 @@
 
 </nav>
 
-<div class="container-fluid mt-4">
-
-  <div class="row">
-
-    <div class="col text-center">
-      <router-outlet></router-outlet>
-    </div>
-
-  </div>
-
+<div class="container mt-5 text-center">
+  <router-outlet></router-outlet>
 </div>
