--- a/src/app/portafolio/pages/proyectos/proyectos.component.html
+++ b/src/app/portafolio/pages/proyectos/proyectos.component.html
@@ -1,47 +1,44 @@
-<section class="container py-5 proyectBackground" id="section2" style="border-radius: 15px;border:solid;">
+<section class="container py-5 proyectBackground" style="border-radius: 15px;border:solid;">
   <h1 class="mb-3">Proyectos</h1>
-  <div class="row justify-content-center mt-3">
 
-    <div *ngIf="_servicio.cargando">
-      <h2>Cargando</h2>
+  <div *ngIf="_servicio.cargando">
+    <h2>Cargando</h2>
 
-      <!-- 1 -->
-      <div class="loader loader--style1" title="0">
-        <svg version="1.1" id="loader-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-          x="0px" y="0px" width="40px" height="40px" viewBox="0 0 40 40" enable-background="new 0 0 40 40"
-          xml:space="preserve">
-          <path opacity="0.2" fill="#000"
-            d="M20.201,5.169c-8.254,0-14.946,6.692-14.946,14.946c0,8.255,6.692,14.946,14.946,14.946
+    <!-- 1 -->
+    <div class="loader loader--style1" title="0">
+      <svg version="1.1" id="loader-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+        x="0px" y="0px" width="40px" height="40px" viewBox="0 0 40 40" enable-background="new 0 0 40 40"
+        xml:space="preserve">
+        <path opacity="0.2" fill="#000" d="M20.201,5.169c-8.254,0-14.946,6.692-14.946,14.946c0,8.255,6.692,14.946,14.946,14.946
   s14.946-6.691,14.946-14.946C35.146,11.861,28.455,5.169,20.201,5.169z M20.201,31.749c-6.425,0-11.634-5.208-11.634-11.634
   c0-6.425,5.209-11.634,11.634-11.634c6.425,0,11.633,5.209,11.633,11.634C31.834,26.541,26.626,31.749,20.201,31.749z" />
-          <path fill="#000" d="M26.013,10.047l1.654-2.866c-2.198-1.272-4.743-2.012-7.466-2.012h0v3.312h0
+        <path fill="#000" d="M26.013,10.047l1.654-2.866c-2.198-1.272-4.743-2.012-7.466-2.012h0v3.312h0
   C22.32,8.481,24.301,9.057,26.013,10.047z">
-            <animateTransform attributeType="xml" attributeName="transform" type="rotate" from="0 20 20"
-              to="360 20 20" dur="0.5s" repeatCount="indefinite" />
-          </path>
-        </svg>
-      </div>
-
-      <p>Espere por favor</p>
+          <animateTransform attributeType="xml" attributeName="transform" type="rotate" from="0 20 20" to="360 20 20"
+            dur="0.5s" repeatCount="indefinite" />
+        </path>
+      </svg>
     </div>
 
-    <div *ngIf="!_servicio.cargando" class="row">
+    <p>Espere por favor</p>
+  </div>
 
-      <div *ngFor="let proyecto of _servicio.equipo" class="col-md-4 col-sm-6 card animate__animated animate__fadeIn mb-3">
-        <img class="card-img-top" [src]="proyecto.url">
+  <div *ngIf="!_servicio.cargando" class="row g-3">
+
+    <div *ngFor="let proyecto of _servicio.equipo" class="col-sm-12 col-md-6 col-lg-4">
+      <div class="card">
+        <img class="card-imp-top rounded-top" [src]="proyecto.url">
         <div class="card-body">
           <h5 class="card-title">{{proyecto.nombre}}</h5>
           <p class="card-text">{{proyecto.descripcion}}</p>
           <div class="row">
-
             <div class="col-6">
-              <a [href]="proyecto.page" class="btn btn-primary bi bi-globe2 mb-1">
+              <a [href]="proyecto.page" class="btn btn-md btn-primary bi bi-globe2 mb-1">
                 Sitio web
               </a>
             </div>
-
             <div class="col-6">
-              <a [href]="proyecto.repositorio" target="_blank" class="btn btn-primary bi bi-github">
+              <a [href]="proyecto.repositorio" target="_blank" class="btn btn-md btn-primary bi bi-github">
                 Repositorio
               </a>
             </div>
