--- a/src/app/portafolio/pages/sobre-mi/sobre-mi.component.html
+++ b/src/app/portafolio/pages/sobre-mi/sobre-mi.component.html
@@ -1,46 +1,50 @@
-<section class="container-fluid py-3 sobreMiBackground"
-                    style="border:solid;border-radius:15px">
-                    <h1 class="mb-5">Sobre mi</h1>
-                    <div class="row gy-sm-3">
-                        <div class="col-md-4">
-                            <img src="./assets/img/perfil.png" class="img-fluid" style="border-radius: 20px;">
-                        </div>
-                        <div class="col-md-4">
-                            <h3 class="mt-3">¿Quién soy?</h3>
-                            <p class="text-start quien_soy">
-                                {{_servicio.info.sobreMi}}
-                            </p>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="row text-start">
-                                <div class="col-12">
-                                    <h3 class="text-center mb-5">Habilidades</h3>
-                                    <div class="row skills text-center">
-                                        <div class="col-4">
-                                            <a class="css"><i class="fab fa-css3-alt"></i></a>
-                                        </div>
-                                        <div class="col-4">
-                                            <a class="js"><i class="fab fa-js"></i></a>
-                                        </div>
-                                        <div class="col-4">
-                                            <a class="php"><i class="fab fa-php"></i></a>
-                                        </div>
-                                        <div class="col-4">
-                                            <a class="sass"><i class="fab fa-sass"></i></a>
-                                        </div>
-                                        <div class="col-4">
-                                            <a class="html"><i class="fab fa-html5"></i></a>
-                                        </div>
-                                        <div class="col-4">
-                                            <a class="python"><i class="fab fa-python"></i></a>
-                                        </div>
-                                        <div class="col-4">
-                                            <a class="bootstrap"><i class="fab fa-bootstrap"></i></a>
-                                        </div>
+<section class="container-fluid py-5 sobreMiBackground" style="border:solid;border-radius:15px">
+  <div class="row gy-3">
+    <div class="col-md-3">
+      <img src="./assets/img/perfil.png" class="img-fluid" style="border-radius: 20px;">
+    </div>
+    <div class="col-md-5">
+      <h3 class="mb-4">Sobre mi</h3>
+      <p class="text-center quien_soy">
+        {{_servicio.info.sobreMi}}
+      </p>
+    </div>
+    <div class="col-md-4">
+      <div class="row">
+        <div class="col-12">
+          <h3 class="text-center mb-2">Principales Habilidades</h3>
+          <div class="row skills">
+            <div class="col-4">
+              <a class="js"><i class="fa-brands fa-js"></i></a>
+            </div>
+            <div class="col-4">
+              <a class="react"><i class="fa-brands fa-react"></i></a>
+            </div>
+            <div class="col-4">
+              <a class="node"><i class="fa-brands fa-node"></i></a>
+            </div>
+            <div class="col-4">
+              <a class="html"><i class="fa-brands fa-html5"></i></a>
+            </div>
+            <div class="col-4">
+              <a class="git"><i class="fa-brands fa-github"></i></a>
+            </div>
+            <div class="col-4">
+              <a class="angular"><i class="fa-brands fa-angular"></i></a>
+            </div>
+            <div class="col-4">
+              <a class="css"><i class="fa-brands fa-css3-alt"></i></a>
+            </div>
+            <div class="col-4">
+              <a class="bootstrap"><i class="fa-brands fa-bootstrap"></i></a>
+            </div>
+            <div class="col-4">
+              <a class="database"><i class="fa-solid fa-database"></i></a>
+            </div>
 
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </section>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
