--- a/src/app/portafolio/pages/layout-page/layout-page.component.html
+++ b/src/app/portafolio/pages/layout-page/layout-page.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark navBackground">
+<nav class="navbar sticky-top navbar-expand-md navbar-dark navBackground">
 
   <div class="container">
 
@@ -86,6 +86,6 @@
 
 </nav>
 
-<div class="container mt-5 text-center">
+<div class="container mt-3 text-center">
   <router-outlet></router-outlet>
 </div>
